# quick-convert

./: .gitignore  README.md  main.py  pyproject.toml
.github/workflows/: CODEOWNERS
configs/asv/: ecapa.yaml
configs/dataset/: iemocap.yaml  stutter.yaml
configs/pipeline/: anonymization.yaml
configs/run/: anonymize_emocomp_clac.yaml  anonymize_emotion_compensation_iemocap.yaml  precompute_f0_stutter.yaml  train_asv_emilia.yaml
quick_convert/cli/: precompute.py  train_asv.py
quick_convert/components/donors/emotion_compensation/: .gitignore  README.md  f0.py  generator.py  utils.py
quick_convert/components/donors/emotion_compensation/scripts/: fairseq_patch.sh
quick_convert/components/feature_extractors/: README.md  base.py  f0.py  speaker_embedding.py
quick_convert/components/feature_providers/: README.md  online.py  sidecar.py
quick_convert/data/: base_dataset.py  features.py
quick_convert/pipelines/: precompute_features.py
quick_convert/pipelines/anonymization/: base_anonymizer.py  emotion_compensation.py  pipeline.py
quick_convert/pipelines/anonymization/targets/: __init__.py  nac.py
quick_convert/pipelines/asv/: audio_loading.py  prepare_dataset.py  speaker_verification_cosine.py  train_speaker_embeddings.py
