[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["main"]

[tool.setuptools.packages.find]
include = ["quick_convert*"]

[tool.uv]
conflicts = [
    [
        { extra = "asv" },
        { extra = "emotion-compensation" },
        { extra = "espnet-wavlm-joint" },
        { extra = "nac" },
        { extra = "pyannote" },
        { extra = "w2vbert" },
        { extra = "web" },
    ],
]

override-dependencies = ["hydra-core==1.3.2", "omegaconf==2.3.0"]

[tool.uv.sources]
fairseq = { git = "https://github.com/facebookresearch/fairseq.git" }

[project]
dependencies = [
    "hydra-core",
    "omegaconf",
    "soundfile>=0.13.1",
    "torch==2.6",
    "torchaudio==2.6",
]

name = "quick-convert"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"

[project.optional-dependencies]
asv = ["speechbrain>=1.1.0", "hyperpyyaml>=1.2.3"]
nac = ["tts>=0.22.0", "transformers"]
web = ["flask>=3.1.3", "pandas>=1.5.3"]
pyannote = ["pyannote-audio>=3.4.0"]
w2vbert = ["transformers"]
espnet-wavlm-joint = ["espnet==202511", "s3prl>=0.4.18"]
emotion-compensation = [
    "amfm-decompy>=1.0.12.2",
    "fairseq==0.12.2",
    "matplotlib",
    "speechbrain>=1.1.0",
]

[project.scripts]
anonymize = "main:main"
# train_asv = "main:main"
# eval_asv = "main:main"
